WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167785
JSDOMWindowBase.cpp doesn't build if the JIT is disabled
https://bugs.webkit.org/show_bug.cgi?id=167785
Summary
JSDOMWindowBase.cpp doesn't build if the JIT is disabled
Alberto Garcia
Reported
2017-02-03 01:47:06 PST
r211403
moved GetCallerGlobalObjectFunctor from JSDOMBinding.cpp to JSDOMWindowBase.cpp, but forgot to include bytecode/CodeBlock.h in the latter file. This breaks the build if the JIT is disabled because the headers that would include ClodeBlock.h indirectly are guarded by ENABLE(JIT). Reproduced with WebKitGTK+ 2.15.4: Source/WebCore/bindings/js/JSDOMWindowBase.cpp: In member function 'JSC::StackVisitor::Status WebCore::callerDOMWindow(JSC::ExecState*)::GetCallerGlobalObjectFunctor::operator()(JSC::StackVisitor&) const': Source/WebCore/bindings/js/JSDOMWindowBase.cpp:304:43: error: invalid use of incomplete type 'class JSC::CodeBlock' m_globalObject = codeBlock->globalObject();
Attachments
Patch
(1.39 KB, patch)
2017-02-03 01:48 PST
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2017-02-03 01:48:34 PST
Created
attachment 300513
[details]
Patch
Alberto Garcia
Comment 2
2017-02-03 02:25:33 PST
Committed
r211624
: <
http://trac.webkit.org/changeset/211624
>
Carlos Garcia Campos
Comment 3
2017-02-06 05:04:17 PST
***
Bug 167873
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug