JSDOMWindowBase.cpp doesn't build if the JIT is disabled https://bugs.webkit.org/show_bug.cgi?id=167785

Reviewed by Carlos Garcia Campos.

r211403 moved GetCallerGlobalObjectFunctor from JSDOMBinding.cpp
to JSDOMWindowBase.cpp, but forgot to include bytecode/CodeBlock.h
in the latter file.

This breaks the build if the JIT is disabled because the headers
that would include ClodeBlock.h indirectly are guarded by
ENABLE(JIT).

* bindings/js/JSDOMWindowBase.cpp:

Canonical link: https://commits.webkit.org/184827@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211624 268f45cc-cd09-0410-ab3c-d52691b4dbfc